# example_package

./: LICENSE  pyproject.toml
