[project]
name = "example_package_jchavesf"
version = "0.0.1"
authors = [
  { name="Julio Chaves", email="chaves.julio@gmail.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/jcchaves/example_package"
Issues = "https://github.com/jcchaves/example_package/issues"